--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -59,4 +59,4 @@ $code-bg-color-dark:      #2c3237 !default;
 $social-icons-left-padding: 3rem;
 $social-icons-gap: 0.5rem;
 $social-icon-margin: 0;
-$thank-you-text-padding: 5rem;
+$thank-you-text-padding: 2.5rem;
